more and more improvements (walking)

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <img alt="location" class="location">
                     <div class="compass">
                         <img src="./game_elements/img2/compass.bmp" alt="compass" class="compass-img">
-                        <div class="top"></div>
-                        <div class="right"></div>
-                        <div class="bottom"></div>
-                        <div class="left"></div>
+                        <div class="NORTH" id="north"></div>
+                        <div class="EAST" id="east"></div>
+                        <div class="SOUTH" id="south"></div>
+                        <div class="WEST" id="west"></div>
                     </div>
                 </div>
                 <span class="direction"></span>
