--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <div class="WEST" id="west"></div>
                     </div>
                 </div>
-                <span class="direction"></span>
-                <span class="sight"></span>
-                <span class="carried-item"></span>
+                <span class="direction">You can go&nbsp;</span>
+                <span class="sight">You see&nbsp;</span>
+                <span class="carried-item">You are carrying&nbsp;</span>
                 <br>
                 <div class="terminal-container">
                     <div class="simple-query">What Now?</div>
