--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     </div>
                 </div>
                 <span class="direction">You can go&nbsp;</span>
-                <span class="sight">You see&nbsp;</span>
-                <span class="carried-item">You are carrying&nbsp;</span>
+                <div class="sight-container"><span>You see&nbsp;</span><span class="sight"></span></div>
+                <div class="carried-container"><span>You are carrying&nbsp;</span><span class="carried"></span></div>
                 <br>
                 <div class="terminal-container">
                     <div class="simple-query">What Now?</div>
