--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
                         <div class="WEST" id="west"></div>
                     </div>
                 </div>
-                <span class="direction">You can go&nbsp;</span>
-                <div class="sight-container"><span>You see&nbsp;</span><span class="sight"></span></div>
-                <div class="carried-container"><span>You are carrying&nbsp;</span><span class="carried"></span></div>
-                <br>
-                <div class="terminal-container">
-                    <div class="simple-query">What Now?</div>
-                    <div class="terminal">
-                        <div class="terminal-wrapper">
-                            <span class="command-line-span"></span>
-                            <input class="command-line-input" autofocus oninput="updateChange(event)"></input>
+                <p class="hints"></p>
+                <div class="down-container">
+                    <span class="direction">You can go&nbsp;</span>
+                    <div class="sight-container"><span>You see&nbsp;</span><span class="sight"></span></div>
+                    <div class="carried-container"><span>You are carrying&nbsp;</span><span class="carried"></span></div>
+                    <br>
+                    <div class="terminal-container">
+                        <div class="simple-query">What Now?</div>
+                        <div class="terminal">
+                            <div class="terminal-wrapper">
+                                <span class="command-line-span"></span>
+                                <input class="command-line-input" autofocus oninput="updateChange(event)"></input>
+                            </div>
                         </div>
                     </div>
                 </div>
