--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./main.js" defer></script>
-    <script src="./modules/terminal.js" defer></script>
     <script type="module" src="./modules/movement.js" defer></script>
+    <script src="./modules/terminal.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -29,7 +29,7 @@
                 </div>
                 <p class="hints"></p>
                 <div class="down-container">
-                    <span class="direction">You can go&nbsp;</span>
+                    <div class="direction-container"><span>You can go&nbsp;</span><span class="direction"></span></div>
                     <div class="sight-container"><span>You see&nbsp;</span><span class="sight"></span></div>
                     <div class="carried-container"><span>You are carrying&nbsp;</span><span class="carried"></span></div>
                     <br>
