--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./main.js" defer></script>
-    <script type="module" src="./modules/movement.js" defer></script>
+    <script type="module" src="./modules/Gameplay.js" defer></script>
     <script src="./modules/terminal.js" defer></script>
 </head>
 <body>
@@ -30,7 +30,7 @@
                 <p class="hints"></p>
                 <div class="down-container">
                     <div class="direction-container"><span>You can go&nbsp;</span><span class="direction"></span></div>
-                    <div class="sight-container"><span>You see&nbsp;</span><span class="sight"></span></div>
+                    <div class="sight-container"><p>You see&nbsp;</p><div class="sight"></div></div>
                     <div class="carried-container"><span>You are carrying&nbsp;</span><span class="carried"></span></div>
                     <br>
                     <div class="terminal-container">
